# CTemplate

./: .gitignore  CMakeLists.txt  package.sh
scripts/: build.sh
src/: CMakeLists.txt
src/Application/: CMakeLists.txt
src/Application/Interfaces/: IDeviceService.h  IUserService.h  IWalletService.h
src/Application/Services/: DeviceService.cpp  DeviceService.h  UserService.cpp  UserService.h  WalletService.cpp  WalletService.h
src/Domain/: CMakeLists.txt
src/Domain/Entities/: Device.cpp  Device.h  User.cpp  User.h  Wallet.cpp  Wallet.h
src/Domain/Repositories/: IDeviceRepository.h  IUserRepository.h  IWalletRepository.h
src/Domain/ValueObjects/: Address.cpp  Address.h
src/Infrastructure/: CMakeLists.txt
src/Infrastructure/Persistence/: DeviceRepository.cpp  DeviceRepository.h  UserRepository.cpp  UserRepository.h  WalletRepository.cpp  WalletRepository.h
src/Presentation/: CMakeLists.txt
src/Presentation/Controllers/: DeviceController.cpp  DeviceController.h  UserController.cpp  UserController.h  WalletController.cpp  WalletController.h
src/SharedKernel/: CMakeLists.txt
src/SharedKernel/Exceptions/: DomainException.h  ValidationException.h
src/SharedKernel/Interfaces/: IEvent.h  IRepository.h  IService.h
src/SharedKernel/Utilities/: DateTime.cpp  DateTime.h  Logger.cpp  Logger.h
tests/: CMakeLists.txt
tests/ApplicationTests/: DeviceServiceTests.cpp
